# opentelemetry-ecosystem-explorer

./: netlify.toml  package-lock.json  package.json  pyproject.toml
.github/workflows/: build-and-test.yml  deploy-preview.yml  deploy-production.yml  deploy-staging.yml  markdown-lint.yml  nightly-registry-update.yml  reusable-workflow-notification.yml  scorecard.yml
ecosystem-automation/collector-watcher/tests/: __init__.py  test_collector_sync.py  test_component_scanner.py  test_inventory.py  test_metadata_parser.py  test_repository_manager.py  test_version_detector.py
ecosystem-automation/configuration-watcher/: README.md  pyproject.toml
ecosystem-automation/configuration-watcher/src/configuration_watcher/: __init__.py  __main__.py  configuration_sync.py  inventory_manager.py  main.py  repository_manager.py  schema_copier.py  version_detector.py
ecosystem-automation/configuration-watcher/tests/: test_configuration_sync.py  test_inventory.py  test_repository_manager.py  test_schema_copier.py  test_version_detector.py
ecosystem-automation/explorer-db-builder/tests/: __init__.py  test_content_hashing.py  test_database_writer.py  test_instrumentation_transformer.py  test_main.py
ecosystem-automation/java-instrumentation-watcher/tests/: test_instrumentation_parser.py  test_instrumentation_sync.py  test_inventory_manager.py  (+1 more)
ecosystem-explorer/: package-lock.json  package.json  vitest.integration.config.ts
ecosystem-explorer/src/: App.tsx  themes.ts
ecosystem-registry/collector/: deprecations.yaml
scripts/: add_copyright.py  check_copyright.py
(+77 files in other folders)
