[project]
name = "configuration-watcher"
version = "0.1.0"
description = "Automation tool for watching OpenTelemetry configuration schema files"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0.1",
    "GitPython>=3.1.40",
    "semantic-version>=2.10.0",
]

[project.scripts]
configuration-watcher = "configuration_watcher.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/configuration_watcher"]
